# plaid-cli-python

./: LICENSE  README.md  pyproject.toml
src/plaid_cli_python/: __main__.py  api.py  linker.py  plaid_cli.py  settings.py
src/plaid_cli_python/templates/: home.html
